[gd_scene load_steps=5 format=3 uid="uid://biqjn62nyirrq"]

[ext_resource type="Script" path="res://scenes/battle/battle.gd" id="1_ari4w"]
[ext_resource type="PackedScene" uid="uid://dsxivqqdrebe6" path="res://scenes/battle/action_queue.tscn" id="2_f2uam"]
[ext_resource type="Texture2D" uid="uid://dl6iqsg6mrmv5" path="res://icon.svg" id="2_f7ri4"]
[ext_resource type="Texture2D" uid="uid://dob1lqw2x7nf4" path="res://assets/textures/ui/placeholderninerect.png" id="3_34m7t"]

[node name="Battle" type="Node"]
script = ExtResource("1_ari4w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerActionQueue" parent="CanvasLayer" instance=ExtResource("2_f2uam")]
anchors_preset = 12
anchor_top = 1.0
offset_top = -40.0
grow_vertical = 0

[node name="EnemyActionQueue" parent="CanvasLayer" instance=ExtResource("2_f2uam")]
anchors_preset = 10
anchor_bottom = 0.0
offset_top = 0.0
offset_bottom = 40.0
grow_vertical = 1
is_player = false

[node name="ActionSelect" type="NinePatchRect" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -505.0
offset_top = -155.0
offset_right = -38.0
offset_bottom = 157.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_34m7t")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ActionSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/ActionSelect/MarginContainer"]
layout_mode = 2
dragger_visibility = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ActionSelect/MarginContainer/VSplitContainer"]
layout_mode = 2

[node name="ExecuteButton" type="Button" parent="CanvasLayer/ActionSelect/MarginContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "execute!!!"

[node name="BattlePopup" type="PanelContainer" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 40)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/BattlePopup"]
layout_mode = 2
size_flags_horizontal = 4
text = "Battle Start!"

[node name="GoodGuy" type="Sprite2D" parent="."]
position = Vector2(266, 464)
texture = ExtResource("2_f7ri4")

[node name="BadGuy" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(860, 246)
texture = ExtResource("2_f7ri4")

[connection signal="pressed" from="CanvasLayer/ActionSelect/MarginContainer/VSplitContainer/ExecuteButton" to="." method="_on_execute_button_pressed"]
